[package]
name = "gpdb"
version = "0.2.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
crc32fast = "1.5.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0"
tempfile = "3.25.0"
rand = "0.8.5"
colored = "2.0"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] }
crossbeam-skiplist = "0.1"
arc-swap = "1.7"
xorf = { version = "0.11", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "memtable_bench"
harness = false

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "sstable_bench"
harness = false

[[bench]]
name = "orchestration_bench"
harness = false

[[bin]]
name = "space_bench"
path = "src/bin/space_bench.rs"
